started typing up notes for multivariable analysis, removed measure theory since i (probably) won't have to type notes for it

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
     <div>
         <ul>
             <li><a href="algebraic topology/algebraic topology math0023.pdf">Algebraic Topology</a></li>
-            <li>Multivariable Analysis</li>
             <li>Topology and Groups</li>
-            <li>Measure Theory</li>
+            <li><a href="multivariable-analysis/multivariable-analysis.pdf">Multivariable Analysis</a></li>
         </ul>
     </div>
 </body>
