started typing up notes for topology and groups, added link to the notes in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div>
         <ul>
             <li><a href="algebraic topology/algebraic topology math0023.pdf">Algebraic Topology</a></li>
-            <li>Topology and Groups</li>
+            <li><a href="topology-and-groups/topology-and-groups.pdf">Topology and Groups</a></li>
             <li><a href="multivariable-analysis/multivariable-analysis.pdf">Multivariable Analysis</a></li>
         </ul>
     </div>
