renamed algebraic topology with dashes and added (incomplete revision) notes for topology and groups as well

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     </h1>
     <div>
         <ul>
-            <li><a href="algebraic topology/algebraic topology math0023.pdf">Algebraic Topology</a></li>
+            <li><a href="algebraic-topology/algebraic-topology-math0023.pdf">Algebraic Topology</a></li>
+            <li><a href="topology-and-groups/topology-and-groups-math0074.pdf">Topology and Groups</li>
         </ul>
     </div>
 </body>
