--- a/index.html
+++ b/index.html
@@ -5,37 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Math Notes</title>
-    <style>
-        * {
-            color: rgb(255, 255, 255);
-            font-family: sans-serif;
-            text-align: center;
-        }
-        body {
-            background-color: rgb(29, 29, 29);
-        }
-
-        h1 {
-            font-size: 24px;
-            padding: 50px;
-        }
-
-        li {
-            padding: 10px;
-            display: inline;
-            font-size: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>
-        Notes
-    </h1>
     <div>
-        <ul>
-            <li><a href="algebraic-topology/algebraic-topology-math0023.pdf">Algebraic Topology</a></li>
-            <li><a href="topology-and-groups/topology-and-groups-math0074.pdf">Topology and Groups</li>
-        </ul>
+        <h1>
+            Math Notes
+        </h1>
+        <p>Series of notes I've taken while doing some of the math modules at UCL.</p>
+    </div>
+    <div id="content">
+        <a href="algebraic-topology/algebraic-topology-math0023.pdf">Algebraic Topology</a>
+        <a href="topology-and-groups/topology-and-groups-math0074.pdf">Topology and Groups</a>
     </div>
 </body>
 </html>
