clean up some files, added measure theory

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <p>Series of notes I've taken while doing some of the math modules at UCL.</p>
     </div>
     <div id="content">
-        <a href="algebraic-topology/algebraic-topology-math0023.pdf">Algebraic Topology</a>
-        <a href="topology-and-groups/topology-and-groups-math0074.pdf">Topology and Groups</a>
+        <a href="notes/algebraic-topology-math0023.pdf">Algebraic Topology</a>
+        <a href="notes/topology-and-groups-math0074.pdf">Topology and Groups</a>
+        <a href="notes/measure-theory-math0017.pdf">Measure Theory</a>
     </div>
 </body>
 </html>
