make links open in new tab

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <p>Series of notes I've taken while doing some of the math modules at UCL.</p>
     </div>
     <div id="content">
-        <a href="notes/algebraic-topology-math0023.pdf">Algebraic Topology</a>
-        <a href="notes/topology-and-groups-math0074.pdf">Topology and Groups</a>
-        <a href="notes/measure-theory-math0017.pdf">Measure Theory</a>
+        <a href="notes/algebraic-topology-math0023.pdf" target="_blank">Algebraic Topology</a>
+        <a href="notes/topology-and-groups-math0074.pdf" target="_blank">Topology and Groups</a>
+        <a href="notes/measure-theory-math0017.pdf" target="_blank">Measure Theory</a>
     </div>
 </body>
 </html>
